--- a/src/module/productcard/_productCard.html
+++ b/src/module/productcard/_productCard.html
@@ -1,4 +1,4 @@
-<li class="@productClass">
+<li class="@productClass" data-category="@productDataCategory">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="@productImageUrl" alt="фотографія @productAlt" width="140" height="140">
