--- a/src/module/mobileMenu/_mobileMenu.html
+++ b/src/module/mobileMenu/_mobileMenu.html
@@ -1,83 +1,90 @@
 <div class="mobile-menu">
 
-    <button class="burger" type="button">
-        <span class="burger__line"></span>
+    <button class="burger icon icon--burger" type="button">
+        <!-- <span class="burger__line"></span> -->
         <span class="sr-only">Відкрити меню</span>
     </button>
 
     <nav class="mobile-menu__nav">
-        <div class="mobile-menu__container">
+
+        <div class="mobile-menu__header">
 
             <a class="logo mobile-menu__logo" href="#header">
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
-            <ul class="mobile-menu__list">
-                <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#header">Головна</a>
+            <button class="close-btn icon icon--close" type="button">
+                <!-- <span class="burger__line"></span> -->
+                <span class="sr-only">Закрити меню</span>
+            </button>
+
+        </div>
+
+        <ul class="mobile-menu__list">
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#header">Головна</a>
+            </li>
+
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#categories">Страви</a>
+            </li>
+
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#footer">Контакти</a>
+            </li>
+        </ul>
+
+        <address class="address">
+            <ul class="address__list">
+
+                <li class="address__item">
+                    <a class="address__link link icon icon--location" href="#">
+                        вул. Т.Г. Шевченка, 1
+                    </a>
                 </li>
 
-                <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#categories">Страви</a>
+                <li class="address__item">
+                    <a class="address__link link icon icon--call" href="tel:+380501112233">
+                        380501112233
+                    </a>
                 </li>
 
-                <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#footer">Контакти</a>
+                <li class="address__item">
+                    <a class="address__link link icon icon--message" href="mailto:support@sfood.com">
+                        support@sfood.com
+                    </a>
                 </li>
+
             </ul>
 
-            <address class="address">
-                <ul class="address__list">
+            <ul class="social">
 
-                    <li class="address__item">
-                        <a class="address__link link icon icon--location" href="#">
-                            вул. Т.Г. Шевченка, 1
-                        </a>
-                    </li>
+                <li class="social__item">
+                    <a class="social__link icon icon--social icon--facebook" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Facebook
+                        </span>
+                    </a>
+                </li>
 
-                    <li class="address__item">
-                        <a class="address__link link icon icon--call" href="tel:+380501112233">
-                            380501112233
-                        </a>
-                    </li>
+                <li class="social__item">
+                    <a class="social__link icon icon--social icon--twitter" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Twitter
+                        </span>
+                    </a>
+                </li>
 
-                    <li class="address__item">
-                        <a class="address__link link icon icon--message" href="mailto:support@sfood.com">
-                            support@sfood.com
-                        </a>
-                    </li>
+                <li class="social__item">
+                    <a class="social__link icon icon--social icon--instagram" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Instagram
+                        </span>
+                    </a>
+                </li>
 
-                </ul>
-
-                <ul class="social">
-
-                    <li class="social__item">
-                        <a class="social__link icon icon--social icon--facebook" href="#">
-                            <span class="sr-only">
-                                Відкрити сторінку Facebook
-                            </span>
-                        </a>
-                    </li>
-
-                    <li class="social__item">
-                        <a class="social__link icon icon--social icon--twitter" href="#">
-                            <span class="sr-only">
-                                Відкрити сторінку Twitter
-                            </span>
-                        </a>
-                    </li>
-
-                    <li class="social__item">
-                        <a class="social__link icon icon--social icon--instagram" href="#">
-                            <span class="sr-only">
-                                Відкрити сторінку Instagram
-                            </span>
-                        </a>
-                    </li>
-
-                </ul>
-            </address>
-        </div>
+            </ul>
+        </address>
     </nav>
 
 </div>
