--- a/src/module/restcard/_restcard.html
+++ b/src/module/restcard/_restcard.html
@@ -1,8 +1,7 @@
 <li class="@restClass">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="@restImageUrl" alt="@resttAlt" width="370"
-                height="300">
+            <img class="rest-card__img" src="@restImageUrl" alt="@resttAlt" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">@restTitle</span>
