--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -40,6 +40,8 @@
                 </li>
             </ul>
 
+            @include('../mobileMenu/_mobileMenu.html')
+
         </nav>
     </div>
 </header>
