add page catalog

--- a/src/modules/mainPage/header/_header.html
+++ b/src/modules/mainPage/header/_header.html
@@ -9,11 +9,11 @@
 
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a class="menu__link menu__link--active" href="#header">Головна</a>
+                    <a class="menu__link menu__link--active" href="../../index.html">Головна</a>
                 </li>
 
                 <li class="menu__item">
-                    <a class="menu__link" href="#categories">Страви</a>
+                    <a class="menu__link" href="../../catalog.html">Страви</a>
                 </li>
 
                 <li class="menu__item">
@@ -40,7 +40,7 @@
                 </li>
             </ul>
 
-            @include('../mobileMenu/_mobileMenu.html')
+            @include('../../mobileMenu/_mobileMenu.html')
 
         </nav>
     </div>
