--- a/src/modules/mainPage/hero/_hero.html
+++ b/src/modules/mainPage/hero/_hero.html
@@ -5,6 +5,10 @@
 
             <div class="hero__content">
 
+                <h1 class="sr-only">
+                    Кращий сайт з доставки їжі
+                </h1>
+
                 <h2 class="hero__title">
                     Доставка
                     <span class="color-orange">за 15 ХВИЛИН</span>
