--- a/src/modules/mainPage/productlist/_productlist.html
+++ b/src/modules/mainPage/productlist/_productlist.html
@@ -1,5 +1,5 @@
 <ul class="product-list">
 
-    @loop('../productcard/_productCard.html', './productlist/_products.json')
+    @loop('../../mainPage/productcard/_productCard.html', './mainPage/productlist/_products.json')
 
 </ul>
