--- a/src/modules/mainPage/review/_review.html
+++ b/src/modules/mainPage/review/_review.html
@@ -10,7 +10,7 @@
 
                 <ul class="swiper-wrapper review-slider__wrapper review__list">
 
-                    @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
+                    @loop('../reviewCard/_reviewCard.html', './mainPage/review/_reviews.json')
 
                 </ul>
 
