--- a/src/modules/mainPage/restaurant/_restaurant.html
+++ b/src/modules/mainPage/restaurant/_restaurant.html
@@ -8,7 +8,7 @@
 
             <ul class="swiper-wrapper restaurant-slider__wrapper restaurant__list">
 
-                @loop('../restcard/_restcard.html', './restaurant/_restaurant.json')
+                @loop('../restcard/_restcard.html', './mainPage/restaurant/_restaurant.json')
 
             </ul>
 
