--- a/src/modules/catalogPage/breadcrumbs/_breadcrumbs.html
+++ b/src/modules/catalogPage/breadcrumbs/_breadcrumbs.html
@@ -7,14 +7,14 @@
         <ul class="breadcrumbs__list">
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">
+                <a class="breadcrumbs__link link" href="../../index.html">
                     Головна
                     <span class="breadcrumb__separator">&gt;</span>
                 </a>
             </li>
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">
+                <a class="breadcrumbs__link link" href="../../catalog.html">
                     Каталог продуктів
                 </a>
             </li>
