add fixed header

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -24,7 +24,7 @@
 
         <nav class="menu">
 
-            <a class="logo header__logo" href="#header">
+            <a class="logo header__logo" href="#hero">
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
@@ -827,6 +827,9 @@
         &copy; 2023 Simple Food
     </a>
 </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="../../js/main.js"></script> 
 
 </body>
 
