--- a/src/modules/mainPage/header/_header.html
+++ b/src/modules/mainPage/header/_header.html
@@ -3,7 +3,7 @@
 
         <nav class="menu">
 
-            <a class="logo header__logo" href="#header">
+            <a class="logo header__logo" href="#hero">
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
