fix adaptive brackpoints

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
-            <button class="burger--close icon icon--burger-close" type="button">
+            <button class="burger__close icon icon--burger-close" type="button">
                 <span class="sr-only">Закрити меню</span>
             </button>
 
@@ -773,8 +773,10 @@
         &copy; 2023 Simple Food
     </a>
 </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../../js/main.js"></script> 
+<script src="../../js/main.js"></script> 
+
 </body>
 
 </html>
