--- a/src/modules/index.html
+++ b/src/modules/index.html
@@ -15,8 +15,9 @@
         </main>
     </div>
     @include('./mainPage/footer/_footer.html')
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../../js/main.js"></script> 
+
+    @include('./scripts/_scripts.html')
+
 </body>
 
 </html>
