--- a/src/catalog.html
+++ b/src/catalog.html
@@ -75,7 +75,7 @@
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
-            <button class="burger--close icon icon--burger-close" type="button">
+            <button class="burger__close icon icon--burger-close" type="button">
                 <span class="sr-only">Закрити меню</span>
             </button>
 
@@ -302,13 +302,20 @@
 
         <ul class="catalog-offers__list">
 
-            <li class="catalog-checkbox">
-                <label class="catalog-checkbox__label" for="discountCheckbox1">
+            <li class="catalog-offers__checkbox">
+                <!-- <label class="catalog-checkbox__label" for="discountCheckbox1">
                     <input class="catalog-checkbox__input" type="checkbox" id="discountCheckbox1"
                         name="discountCheckbox1">
                     <span class="catalog-checkbox__checkmark"></span>
                     <span class="catalog-checkbox__text">Зі знижкою</span>
-                </label>
+                </label> -->
+
+                <div class="checkbox">
+                    <input class="checkbox__input sr-only" type="checkbox" id="catalog-checkbox[sale]">
+                    <label class="checkbox__label" for="catalog-checkbox[sale]">
+                        Зі знижкою
+                    </label>
+                </div>
             </li>
 
             <li class="catalog-checkbox">
@@ -829,7 +836,7 @@
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../../js/main.js"></script> 
+<script src="../../js/main.js"></script> 
 
 </body>
 
