--- a/src/modules/mobileMenu/_mobileMenu.html
+++ b/src/modules/mobileMenu/_mobileMenu.html
@@ -12,7 +12,7 @@
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
-            <button class="burger--close icon icon--burger-close" type="button">
+            <button class="burger__close icon icon--burger-close" type="button">
                 <span class="sr-only">Закрити меню</span>
             </button>
 
