--- a/src/modules/product.html
+++ b/src/modules/product.html
@@ -5,8 +5,21 @@
 <body>
 
     <div class="wrapper">
+        @include('./mainPage/header/_header.html')
+
+        @include('./catalogPage/breadcrumbs/_breadcrumbs.html')
+
+        <main class="main">
+
+            @include('./productPage/productGalellery/productgallery.html')
+
+        </main>
 
     </div>
+
+    @include('./mainPage/footer/_footer.html')
+
+    @include('./scripts/_scripts.html')
 
 </body>
 
