--- a/src/product.html
+++ b/src/product.html
@@ -18,8 +18,378 @@
 <body>
 
     <div class="wrapper">
+        <header class="header" id="header">
+    <div class="container">
+
+        <nav class="menu">
+
+            <a class="logo header__logo" href="#hero">
+                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+            </a>
+
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a class="menu__link menu__link--active" href="../../index.html">Головна</a>
+                </li>
+
+                <li class="menu__item">
+                    <a class="menu__link" href="../../catalog.html">Страви</a>
+                </li>
+
+                <li class="menu__item">
+                    <a class="menu__link" href="#footer">Контакти</a>
+                </li>
+            </ul>
+
+            <ul class="user-nav">
+                <li class="user-nav__item">
+                    <button class="user-nav__btn icon icon--search" type="button">
+                        <span class="sr-only">
+                            Почати пошук
+                        </span>
+                    </button>
+                </li>
+
+                <li class="user-nav__item">
+                    <button class="user-nav__btn icon icon--cart" type="button">
+                        <span class="sr-only">
+                            Відкрити корзину
+                        </span>
+                        <span class="user-nav__number">4</span>
+                    </button>
+                </li>
+            </ul>
+
+            <div class="mobile-menu">
+
+    <button class="burger icon icon--burger-open" type="button">
+        <span class="sr-only">Відкрити меню</span>
+    </button>
+
+    <nav class="mobile-menu__nav">
+
+        <div class="mobile-menu__header">
+
+            <a class="logo mobile-menu__logo" href="#header">
+                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+            </a>
+
+            <button class="burger__close icon icon--burger-close" type="button">
+                <span class="sr-only">Закрити меню</span>
+            </button>
+
+        </div>
+
+        <ul class="menu__list mobile-menu__list">
+            <li class="menu__item mobile-menu__item">
+                <a class="menu__link menu__link--active mobile-menu__link" href="#header">Головна</a>
+            </li>
+
+            <li class="menu__item  mobile-menu__item">
+                <a class="menu__link mobile-menu__link" href="#categories">Страви</a>
+            </li>
+
+            <li class="menu__item  mobile-menu__item">
+                <a class="menu__link mobile-menu__link" href="#footer">Контакти</a>
+            </li>
+        </ul>
+
+        <address class="address mobile-menu__address">
+            <ul class="address__list">
+
+                <li class="address__item">
+                    <a class="address__link link icon icon--location" href="#">
+                        вул. Т.Г. Шевченка, 1
+                    </a>
+                </li>
+
+                <li class="address__item">
+                    <a class="address__link link icon icon--call" href="tel:+380501112233">
+                        380501112233
+                    </a>
+                </li>
+
+                <li class="address__item">
+                    <a class="address__link link icon icon--message" href="mailto:support@sfood.com">
+                        support@sfood.com
+                    </a>
+                </li>
+
+            </ul>
+
+            <ul class="social mobile-menu__social">
+
+                <li class="social__item mobile-menu__social-list">
+                    <a class="social__link icon icon--social icon--facebook" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Facebook
+                        </span>
+                    </a>
+                </li>
+
+                <li class="social__item">
+                    <a class="social__link icon icon--social icon--twitter" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Twitter
+                        </span>
+                    </a>
+                </li>
+
+                <li class="social__item">
+                    <a class="social__link icon icon--social icon--instagram" href="#">
+                        <span class="sr-only">
+                            Відкрити сторінку Instagram
+                        </span>
+                    </a>
+                </li>
+
+            </ul>
+        </address>
+    </nav>
+
+</div>
+
+        </nav>
+    </div>
+</header>
+
+        <section class="breadcrumbs">
+
+    <div class="container">
+
+    <div class="breadcrumbs__inner">
+
+        <ul class="breadcrumbs__list">
+
+            <li class="breadcrumbs__item">
+                <a class="breadcrumbs__link link" href="../../index.html">
+                    Головна
+                    <span class="breadcrumb__separator">&gt;</span>
+                </a>
+            </li>
+
+            <li class="breadcrumbs__item">
+                <a class="breadcrumbs__link link" href="../../catalog.html">
+                    Каталог продуктів
+                </a>
+            </li>
+
+        </ul>
 
     </div>
+
+</div>
+
+</section>
+
+        <main class="main">
+
+            <section class="section product-gallery">
+
+    <div class="container">
+
+
+        <div class="product-gallery__img">
+
+        </div>
+
+        <div class="wrapper">
+            <h2 class="title product-gallery__title">
+                Чізбургер з листям салату
+            </h2>
+
+            <div class="product-gallery__rating">
+                <ul class="rating">
+                    <li class="rating__item"></li>
+                    <li class="rating__item"></li>
+                    <li class="rating__item"></li>
+                    <li class="rating__item"></li>
+                    <li class="rating__item"></li>
+                </ul>
+            </div>
+
+            <span class="product-gallery__price">
+                160 грн.
+            </span>
+
+            <button></button>
+            <button></button>
+
+
+            <div class="product-gallery__info">
+                <h3>
+                    Доставка та оплата
+                </h3>
+                <p>
+                    Мінімальна сума замовлення — 160 грн.
+                    Час доставки замовлення — 80-140 мин.
+                    Оплата здійснюється тільки банківською карткою.
+                    Остаточна сума замовлення формується після збору товарів.
+                </p>
+                <a href="#">Детальніше</a>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+        </main>
+
+    </div>
+
+    <footer class="footer" id="footer">
+    <div class="container">
+
+        <div class="footer__inner">
+
+            <div class="footer__box">
+
+                <a class="logo footer__logo" href="#">
+                    <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                </a>
+
+                <form class="form" action="#">
+
+                    <label class="form__label" for="email">
+                        <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
+                            required>
+                        <span class="sr-only">Впишіть ваш імейл</span>
+                    </label>
+
+                    <button class="btn form__btn icon icon--telegram" type="submit">
+                        Підписатися
+                    </button>
+
+                </form>
+
+            </div>
+
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Як це працює
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Про нас
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Застосунок
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Продукти
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Новини
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Блог
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Страви
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Партнери
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Що нового?
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Меню
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        ЧаПи
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Мапа сайту
+                    </a>
+                </li>
+            </ul>
+
+            <address class="address">
+                <ul class="address__list">
+
+                    <li class="address__item">
+                        <a class="address__link link icon icon--location" href="#">
+                            вул. Т.Г. Шевченка, 1
+                        </a>
+                    </li>
+
+                    <li class="address__item">
+                        <a class="address__link link icon icon--call" href="tel:+380501112233">
+                            380501112233
+                        </a>
+                    </li>
+
+                    <li class="address__item">
+                        <a class="address__link link icon icon--message" href="mailto:support@sfood.com">
+                            support@sfood.com
+                        </a>
+                    </li>
+
+                </ul>
+
+                <ul class="social">
+
+                    <li class="social__item">
+                        <a class="social__link icon icon--social icon--facebook" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Facebook
+                            </span>
+                        </a>
+                    </li>
+
+                    <li class="social__item">
+                        <a class="social__link icon icon--social icon--twitter" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Twitter
+                            </span>
+                        </a>
+                    </li>
+
+                    <li class="social__item">
+                        <a class="social__link icon icon--social icon--instagram" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Instagram
+                            </span>
+                        </a>
+                    </li>
+
+                </ul>
+            </address>
+
+        </div>
+
+    </div>
+
+    <a class="footer__text" href="#header">
+        &copy; 2023 Simple Food
+    </a>
+</footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="../../js/main.js"></script> 
 
 </body>
 
