fix adaptiva and catalogPage

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
     <link href="../../images/icons/favicon/site.webmanifest" rel="manifest" />
     <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
@@ -776,6 +777,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="../../js/main.js"></script> 
+
 
 </body>
 
