--- a/src/modules/head/_head.html
+++ b/src/modules/head/_head.html
@@ -9,6 +9,7 @@
     <link href="../../images/icons/favicon/site.webmanifest" rel="manifest" />
     <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
