--- a/src/catalog.html
+++ b/src/catalog.html
@@ -12,7 +12,8 @@
     <link href="../../images/icons/favicon/site.webmanifest" rel="manifest" />
     <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
@@ -365,11 +366,7 @@
             </label>
         </div>
 
-            <label class="catalog-price__range" for="priceRange">
-                <input class="catalog-price__input-range" type="range" id="priceRange" name="priceRange" min="1" max="9999" step="1">
-            </label>
 
-        </form>
 
     </div>
 
@@ -837,6 +834,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="../../js/main.js"></script> 
+
 
 </body>
 
